--- a/app/src/main/res/values/ContactDetailsResources.xml
+++ b/app/src/main/res/values/ContactDetailsResources.xml
@@ -7,4 +7,5 @@
     <string name="contact_type_email">e:</string>
     <string name="contact_type_web">w:</string>
     <string name="job_role">Software Engineer</string>
+    <string name="full_name">Faisal Memon</string>
 </resources>
